Update README.md and Default Route and Description
