# routes/index.js
@@ -3,8 +3,8 @@ const router = require('express').Router();
 router.use('/', require('./swagger'));
 
 router.get('/', (req, res) => {
-    //#swagger.tags = ['Hello World']
-    res.send('Hello World');
+    //#swagger.tags = ['Welcome']
+    res.send('Welcome to the National Parks and Activities API');
 });
 
 router.use('/parks', require('./parks'));
